Thu Jun 13 22:12:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#rmdir): fix traversal loop, not trying
	  remove same directory only.

Thu Jun 13 21:30:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (opt-dir), tool/ifchange: get rid of "alternate value"
	  expansion for legacy sh.  [ruby-dev:47420] [Bug #8524]

Thu Jun 13 21:24:09 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Refactored to use ALLOCV_N for temporary
	  buffers.

Thu Jun 13 18:54:11 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bignum.c (integer_unpack_num_bdigits_generic): reorder terms (but not
	  changed the intention of the expression) because VC++ reports a
	  warning for it.  reported by ko1 via IRC.

Thu Jun 13 18:53:14 2013  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_thread.rb (test_thread_local_security): Don't create
	  an unused thread.

Thu Jun 13 18:34:20 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Use nlz.

Thu Jun 13 14:51:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): check constant safe
	  level at compile time.

Thu Jun 13 14:39:08 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* test/-ext-/test_printf.rb, test/rss/test_parser.rb,
	  test/ruby/test_array.rb, test/ruby/test_hash.rb,
	  test/ruby/test_m17n.rb, test/ruby/test_marshal.rb,
	  test/ruby/test_object.rb, test/ruby/test_string.rb: don't use
	  untrusted?, untrust, and trust to avoid warnings in case $VERBOSE is
	  true.

Thu Jun 13 10:47:16 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* bootstraptest/test_autoload.rb, bootstraptest/test_method.rb:
	  remove tests for $SAFE=4.

	* lib/pp.rb: use taint instead of untrust to avoid warnings when
	  $VERBOSE is set to true.

Thu Jun 13 06:12:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_num_bdigits_small): Fix a compile error on
	  clang -Werror,-Wshorten-64-to-32
	  Reported by Eric Hodel.  [ruby-core:55467] [Bug #8522]
